--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,7 +37,7 @@
                 android:layout_marginTop="70dp"
                 android:background="@null"
                 android:scaleType="centerCrop"
-                android:src="@mipmap/ic_launcher" />
+                android:src="@drawable/personal" />
 
             <LinearLayout
                 android:layout_width="match_parent"
