--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -19,25 +19,25 @@
         android:layout_height="100dp"
         android:layout_below="@id/toolbar"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
         android:src="@mipmap/ic_launcher" />
 
     <TextView
-        android:id="@+id/my_id"
+        android:id="@+id/my_nickname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/my_photo"
         android:layout_centerHorizontal="true"
-        android:text="黄杰安"
         android:textColor="#000000"
+        android:text="杰安"
         android:textSize="18sp" />
 
     <LinearLayout
         android:id="@+id/follow_fans"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/my_id"
-        android:layout_marginTop="10dp"
+        android:layout_below="@+id/my_nickname"
+        android:layout_marginTop="8dp"
         android:gravity="center_horizontal">
 
         <TextView
@@ -97,25 +97,65 @@
         android:background="@android:color/black" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/horizontal_cut"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp">
+        android:layout_margin="10dp"
+        android:background="@drawable/llstyle"
+        android:orientation="vertical">
 
-        <Button
-            android:layout_width="150dp"
-            android:layout_height="50dp"
-            android:layout_marginRight="20dp"
-            android:text="收藏"
-            android:textSize="20sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="horizontal"
+            android:padding="10dp">
 
-        <Button
-            android:layout_width="150dp"
-            android:layout_height="50dp"
-            android:layout_marginLeft="20dp"
-            android:text="历史"
-            android:textSize="20sp" />
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/personal" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:gravity="center_vertical"
+                android:text="详细资料"
+                android:textColor="@color/black"
+                android:textSize="20dp" />
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@android:color/darker_gray" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="horizontal"
+            android:padding="10dp">
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/favorite" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:gravity="center_vertical"
+                android:text="收藏"
+                android:textColor="@color/black"
+                android:textSize="20dp" />
+
+        </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
