--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -149,22 +149,27 @@
 
                 <TextView
                     android:id="@+id/regist"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
                     android:layout_marginBottom="10dp"
-                    android:layout_weight="1"
+                    android:layout_weight="3.2"
                     android:text="@string/gotoRegist"
                     android:textColor="@color/black"
                     android:textSize="14dp" />
 
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="10" />
+
                 <TextView
                     android:id="@+id/forget_password"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginLeft="21dp"
+                    android:layout_weight="2.7"
+                    android:gravity="right"
                     android:text="@string/login_forget_pwd"
                     android:textColor="@color/black"
                     android:textSize="14dp" />
