--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -37,7 +37,7 @@
         android:hint="昵称"
         android:padding="20dp"
         android:textColor="@color/black"
-        android:textColorHint="@color/grey"
+        android:textColorHint="@color/gray"
         android:textSize="20dp" />
 
     <EditText
@@ -51,7 +51,7 @@
         android:inputType="textPassword"
         android:padding="20dp"
         android:textColor="@color/black"
-        android:textColorHint="@color/grey"
+        android:textColorHint="@color/gray"
         android:textSize="20dp" />
 
 
@@ -66,7 +66,7 @@
         android:inputType="textPassword"
         android:padding="20dp"
         android:textColor="@color/black"
-        android:textColorHint="@color/grey"
+        android:textColorHint="@color/gray"
         android:textSize="20dp" />
 
 
