--- a/app/src/main/res/layout/fragment_hot.xml
+++ b/app/src/main/res/layout/fragment_hot.xml
@@ -13,33 +13,7 @@
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/crimson">
-
-
-            <LinearLayout
-                android:id="@+id/hot_search"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/llstyle2"
-                android:orientation="horizontal"
-                app:layout_scrollFlags="scroll|enterAlways|snap">
-
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="30dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
-                    android:src="@drawable/search" />
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="35dp"
-                    android:layout_weight="10"
-                    android:gravity="center_vertical"
-                    android:paddingLeft="10dp"
-                    android:text="每日热搜:"
-                    android:textSize="20dp" />
-            </LinearLayout>
+            android:background="@color/crimson">1
 
         </android.support.design.widget.AppBarLayout>
 
