--- a/app/src/main/res/layout/toolbar_comment_writeweibo.xml
+++ b/app/src/main/res/layout/toolbar_comment_writeweibo.xml
@@ -5,7 +5,7 @@
     android:background="@color/topbar_bg">
 
     <TextView
-        android:id="@+id/idea_cancel"
+        android:id="@+id/comment_cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -29,23 +29,15 @@
             android:id="@+id/inputType"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="发微博"
+            android:text="发评论"
             android:textColor="@color/middle_send_text"
             android:textSize="17sp" />
 
-        <TextView
-            android:id="@+id/idea_username"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="分享新鲜事"
-            android:textColor="@color/middle_username_text"
-            android:textSize="12sp" />
 
     </LinearLayout>
 
-
     <TextView
-        android:id="@+id/idea_send"
+        android:id="@+id/comment_send"
         android:layout_width="48dp"
         android:layout_height="31dp"
         android:layout_alignParentRight="true"
