--- a/app/src/main/res/layout/weibo_detail_comment.xml
+++ b/app/src/main/res/layout/weibo_detail_comment.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/noneLayout"
     android:layout_width="match_parent"
-    android:layout_height="210dp"
-    android:layout_marginBottom="30dp"
+    android:layout_height="400dp"
     android:background="@color/empty_bg"
     android:orientation="vertical">
 
@@ -13,7 +13,7 @@
         android:background="@color/commentbar_top_drive" />
 
     <TextView
-        android:id="@+id/tv_normal_refresh_footer_status"
+        android:id="@+id/comment_none"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
@@ -23,4 +23,16 @@
         android:textColor="@color/empty_text"
         android:textSize="16sp" />
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/comment_refresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/comment_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingBottom="10dp" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
