--- a/app/src/main/res/layout/weibo_detail.xml
+++ b/app/src/main/res/layout/weibo_detail.xml
@@ -1,4 +1,5 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,9 +10,9 @@
         android:orientation="vertical"
         android:paddingTop="10dp">
 
-        <include layout="@layout/weiboitem_detail_toolbar" />
+        <include layout="@layout/weibo_detail_toolbar" />
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <LinearLayout
             android:id="@+id/bg_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -27,7 +28,7 @@
                 android:orientation="horizontal"
                 android:paddingLeft="8dp">
 
-                <include layout="@layout/weiboitem_profileimg" />
+                <include layout="@layout/profileimg_weiboitem" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -121,9 +122,13 @@
         </LinearLayout>
 
 
-        <include layout="@layout/weiboitem_detail_bottom_bar" />
+        <include
+            android:id="@+id/bottom_bar"
+            layout="@layout/weibo_detail_bottom_bar"
+            android:layout_width="match_parent"
+            android:layout_height="42.5dp" />
 
-        <include layout="@layout/weiboitem_detail_none" />
+        <include layout="@layout/weibo_detail_comment" />
     </LinearLayout>
 </ScrollView>
 
