--- a/app/src/main/res/layout/weibo_detail_bottom_bar.xml
+++ b/app/src/main/res/layout/weibo_detail_bottom_bar.xml
@@ -39,6 +39,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/ll_commentbar"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginLeft="5dp"
