--- a/app/src/main/res/layout/weiboitem_bottombar.xml
+++ b/app/src/main/res/layout/weiboitem_bottombar.xml
@@ -62,7 +62,7 @@
             android:layout_weight="1">
 
             <LinearLayout
-                android:id="@+id/bottombar_comment"
+                android:id="@+id/edit_comment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@drawable/timeline_feedcard_retweet_background_auto"
