--- a/app/src/main/res/layout/weiboitem_bottombar.xml
+++ b/app/src/main/res/layout/weiboitem_bottombar.xml
@@ -108,6 +108,7 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/img_feedlike"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/timeline_icon_unlike" />
