--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -25,50 +25,56 @@
         android:padding="20dp"
         android:text="请填写昵称和密码"
         android:textColor="@color/black"
-        android:textSize="30dp" />
+        android:textSize="20dp" />
+
 
     <EditText
         android:id="@+id/nickname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/text1"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:background="@null"
         android:hint="昵称"
-        android:padding="20dp"
+        android:inputType="textVisiblePassword"
+        android:lines="1"
+        android:maxLength="11"
+        android:padding="18dp"
         android:textColor="@color/black"
-        android:textColorHint="@color/gray"
-        android:textSize="20dp" />
+        android:textSize="18dp" />
 
     <EditText
         android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/nickname"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:background="@null"
         android:hint="密码"
-        android:inputType="textPassword"
-        android:padding="20dp"
+        android:inputType="textVisiblePassword"
+        android:lines="1"
+        android:maxLength="11"
+        android:padding="18dp"
         android:textColor="@color/black"
-        android:textColorHint="@color/gray"
-        android:textSize="20dp" />
-
+        android:textSize="18dp" />
 
     <EditText
         android:id="@+id/password2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/password"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:background="@null"
         android:hint="确认密码"
-        android:inputType="textPassword"
-        android:padding="20dp"
+        android:inputType="textVisiblePassword"
+        android:lines="1"
+        android:maxLength="11"
+        android:padding="18dp"
         android:textColor="@color/black"
-        android:textColorHint="@color/gray"
-        android:textSize="20dp" />
-
+        android:textSize="18dp" />
 
     <Button
         android:id="@+id/password_confirm"
