--- a/app/src/main/res/layout/toolbar_settings.xml
+++ b/app/src/main/res/layout/toolbar_settings.xml
@@ -7,14 +7,14 @@
     android:background="@color/topbar_bg">
 
     <ImageView
-        android:id="@+id/toolbar_back"
+        android:id="@+id/settingtoolbar_back"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:layout_marginLeft="8dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/navigationbar_back_auto" />
+        android:src="@drawable/back" />
 
     <TextView
         android:layout_width="wrap_content"
